infra/dns/acme-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-dns
  namespace: dns
  labels:
    app: acme-dns
spec:
  ports:
  - port: 53
    name: tcp-53
  - port: 80
    name: api
  selector:
    app: acme-dns
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: acme-dns
  namespace: dns
spec:
  selector:
    matchLabels:
      app: acme-dns
  replicas: 1
  serviceName: acme-dns
  template:
    metadata:
      labels:
        app: acme-dns 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: acme-dns
        image: joohoi/acme-dns
        ports:
        - containerPort: 53
          protocol: TCP
          name: tcp-53
        - containerPort: 80
          protocol: TCP
          name: api
        volumeMounts:
        - name: sqlite
          mountPath: /var/lib/acme-dns 
        - name: acmedns-config
          mountPath: /etc/acme-dns
      volumes:
      - name: acmedns-config
        configMap:
          name: acmedns-config
          items:
          - key: config.cfg
            path: config.cfg  
  volumeClaimTemplates:
  - metadata:
      name: sqlite
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "rook-ceph-block"
      resources:
        requests:
          storage: 1Gi
